fix images that need overlap with negative margin-top

--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,16 @@ a {
     height: 6.2%;
 }
 
+/* Events */
+.events-image-2 {
+    margin-top: -4.1%;
+}
+
+/* Contact */
+.contact-image-2 {
+    margin-top: -2.9%;
+}
+
 /* Legal mentions */
 .legal-mentions {
     padding: 5px;
